# slam

./: .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG_odometry_refactor.md  CHANGELOG_wheel_odometry.md  COMPLETE_USAGE_GUIDE.md  FULL_NAVIGATION_GUIDE.md  NAVIGATION_DEBUG_GUIDE.md  NEW_FEATURES_SUMMARY.md  PROJECT_SUMMARY.md  Project_Report.md  QUICK_REFERENCE.md  QUICK_START.md  SERIAL_INTEGRATION_COMPLETE.md  SUBMODULES.md  check_alignment.sh  return_home.sh  save_map.sh  save_map_from_cartographer.sh  start.sh  start_auto_pickup.sh  start_carto_loc.sh  start_slam_toolbox.sh  test_odom_format.sh  test_serial.sh  waypoint_commands.sh  串口通信测试指南.md
.github/: copilot-instructions.md
src/my_slam_config/: CMakeLists.txt  package.xml
src/my_slam_config/config/: backpack_2d.lua
src/my_slam_config/launch/: cartographer.launch.py
src/navigation_control/: .gitignore  CMakeLists.txt  README.md  README_轮式里程计使用指南.md  package.xml
src/navigation_control/config/: amcl.yaml  cartographer_2d.lua  cartographer_localization.lua  nav2_params.yaml  navigation_debug.rviz  odometry_debug.rviz
src/navigation_control/docs/: CARTOGRAPHER_LOCALIZATION_GUIDE.md  GLOBAL_LOCALIZATION_GUIDE.md  LAUNCH_FILES_GUIDE.md  ODOMETRY_INTEGRATION.md  SERIAL_COMMUNICATION.md  SERIAL_PROTOCOL.md  STM32_ODOMETRY_REFERENCE.md  SYSTEM_OVERVIEW.md
src/navigation_control/launch/: cartographer_localization.launch.py  color_tracking_with_serial.launch.py  full_navigation.launch.py  mapping.launch.py  nav2_navigation.launch.py  navigation.launch.py  navigation_debug.launch.py  serial_debug.launch.py  view_robot.launch.py
src/navigation_control/maps/: README.md  my_map.pbstream  my_map.pgm  my_map.yaml  my_map2.pbstream
src/navigation_control/scripts/: astar_planner.py  cartographer_initial_pose_setter.py  coordinate_checker.py  initial_pose_setter.py  keyboard_teleop.py  map_republisher.py  odom_data_viewer.py  odom_to_path.py  relocalize.py  save_cartographer_map.sh  serial_monitor.py  simple_goal_controller.py  test_localization.sh  test_scan_filter.py  test_system.py  test_velocity_pub.py
src/navigation_control/src/: localization_manager.cpp  manual_goal_setter.cpp  mapping_manager.cpp  navigation_controller.cpp  obstacle_monitor.cpp  omni_wheel_controller.cpp  robot_state_manager.cpp  scan_filter_node.cpp  serial_communication.cpp  serial_data_publisher.cpp  wheel_odometry_node.cpp
src/navigation_control/urdf/: robot.urdf
src/sllidar_ros2/: CMakeLists.txt
